Making blog more LP generic and adding IanFeathers posts

--- a/_config.yml
+++ b/_config.yml
@@ -82,3 +82,10 @@ authors:
     twitter: jocranford
     github: jocranford
     gravatar: 5f3cd77f7e90ceede71c18c0b76f67d4
+  ifeather:
+    display_name: Ian Feather
+    email: ian.feather@lonelyplanet.co.uk
+    web: http://ianfeather.co.uk/
+    twitter: ianfeather
+    github: ianfeather
+    gravatar: 649e3d33ce29a5e6bb4ff3025c6aaffa
