--- a/_config.yml
+++ b/_config.yml
@@ -82,3 +82,10 @@ authors:
     twitter: jocranford
     github: jocranford
     gravatar: 5f3cd77f7e90ceede71c18c0b76f67d4
+  ianfeather:
+    display_name: Ian Feather
+    email: ian.feather@lonelyplanet.com
+    web: ianfeather.co.uk
+    twitter: ianfeather
+    github: ianfeather
+    gravatar:
