Add integration tests on Travis

--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ safe: true
 lsi: false
 baseurl:
 url: engineering.lonelyplanet.com
+exclude: [vendor]
 authors:
   mriddle:
     display_name: Matt Riddle
