add author Mike Kunkel

--- a/_config.yml
+++ b/_config.yml
@@ -89,3 +89,10 @@ authors:
     twitter: ianfeather
     github: ianfeather
     gravatar:
+  mkunkel:
+    display_name: Mike Kunkel
+    email: mike.kunkel@lonelyplanet.com
+    web: mkunkel.com
+    twitter: m_kunkel
+    github: mkunkel
+    gravatar:
