Adds eurucamp/jrubyconf post

--- a/_config.yml
+++ b/_config.yml
@@ -96,3 +96,10 @@ authors:
     twitter: m_kunkel
     github: mkunkel
     gravatar:
+  edubkendo:
+    display_name: Eric West
+    email: eric.west@lonelyplanet.com
+    web:
+    twitter: e_dub_kendo
+    github: edubkendo
+    gravatar: c983ad33b47479f17a28e083e1bb3d8b
