Add info to config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -103,3 +103,9 @@ authors:
     twitter: e_dub_kendo
     github: edubkendo
     gravatar: c983ad33b47479f17a28e083e1bb3d8b
+ joeshep:
+    display_name: Joe Shepherd
+    email: joe.shepherd@lonelyplanet.com
+    twitter: joeshepmedia
+    github: joeshep
+    gravitar: 526d4412f5ccb8219acb0ea4636798e4
