add pair-programming blog post

--- a/_config.yml
+++ b/_config.yml
@@ -108,4 +108,10 @@ authors:
     email: joe.shepherd@lonelyplanet.com
     twitter: joeshepmedia
     github: joeshep
-    gravitar: 526d4412f5ccb8219acb0ea4636798e4
+    gravatar: 526d4412f5ccb8219acb0ea4636798e4
+  ado:
+    display_name: Anh Do
+    email: anh.do@lonelyplanet.com.au
+    web: anhnk.github.io
+    twitter: anhnk
+    github: anhnk
