Add nogates to authors config

--- a/_config.yml
+++ b/_config.yml
@@ -121,3 +121,9 @@ authors:
     web: www.polibyte.com
     twitter: sciurus
     github: sciurus
+  nogates:
+    display_name: David Tapiador
+    email: david.tapiador@lonelyplanet.com.au
+    github: nogates
+    gravatar: f78980f7a4fe4272ce15f4d277e4a3b2
+
