Add Brian to authors

--- a/_config.yml
+++ b/_config.yml
@@ -115,3 +115,9 @@ authors:
     web: anhnk.github.io
     twitter: anhnk
     github: anhnk
+  brianp:
+    display_name: Brian Pitts
+    email: brian.pitts@lonelyplanet.com
+    web: www.polibyte.com
+    twitter: sciurus
+    github: sciurus
