--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ authors:
   mriddle:
     display_name: Matt Riddle
     email: matthew.riddle@lonelyplanet.com.au
-    web: http://www.mriddle.com/
+    web: http://mriddle.com/
     twitter: mriddle89
     github: mriddle
     gravatar: a9bc4b096d30752506ea4edac12ada93
@@ -133,4 +133,3 @@ authors:
     email: david.tapiador@lonelyplanet.com.au
     github: nogates
     gravatar: f78980f7a4fe4272ce15f4d277e4a3b2
-
